--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
         <img src="assets/figures/screen.png" alt="Services" style="width: 50%; height: auto; margin-top: 20px; border-radius: 8px;">
     </div>
 
-    <div class="container blog main max gray">
-        <h2>
-            Meet the Team
-        </h2>
+    <div class="container blog main gray">
+        <h1>
+            Meet the Team.
+        </h1>
     </div>
     <div class="container blog max gray">
         <div class="slideshow" id="slide-menu">
@@ -195,7 +195,7 @@
         </div>
     </div>
     <div class="container blog main" >
-        <h2>Get in touch</h2>
+        <h1>Get in touch.</h1>
         <p class="text"">
             If you are interested in COLEASEUM, please provide your email for more information about the company, investment opportunities, and future updates.
         </p>
