--- a/index.html
+++ b/index.html
@@ -156,38 +156,38 @@
                 <a class="button icon" id="next_btn" style="cursor: pointer;"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="slider" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-                <div class="slider-item" style="text-align: center; margin-bottom: 20px;">
-                    <img src="assets/figures/IMG_4635.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px;">
+                <div class="slider-item" style="text-align: center;margin-bottom: 20px;margin-right: 30px;left: 0px;transition-duration: 1.5s;padding-left: 0px;">
+                    <img src="assets/figures/IMG_4635.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px; margin-right: 30px;">
                     <p class="text"><code>Souad Boukhedenna</code></p>
                     <p style="font-size: 14px; font-style: italic; color: #555;">Founding Team</p>
                 </div>
-                <div class="slider-item" style="text-align: center; margin-bottom: 20px;">
-                    <img src="assets/figures/cem000332490016+2.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px;">
+                <div class="slider-item" style="text-align: center;margin-bottom: 20px;margin-right: 30px;left: 0px;transition-duration: 1.5s;padding-left: 0px;">
+                    <img src="assets/figures/cem000332490016+2.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px; margin-right: 30px;">
                     <p class="text"><code>Cem Gunay</code></p>
                     <p style="font-size: 14px; font-style: italic; color: #555;">Cofounder</p>
                 </div>
-                <div class="slider-item" style="text-align: center; margin-bottom: 20px;">
-                    <img src="assets/figures/Untitled.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px;">
+                <div class="slider-item" style="text-align: center;margin-bottom: 20px;margin-right: 30px;left: 0px;transition-duration: 1.5s;padding-left: 0px;">
+                    <img src="assets/figures/Untitled.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px; margin-right: 30px;">
                     <p class="text"><code>Gibril Bachouchi</code></p>
                     <p style="font-size: 14px; font-style: italic; color: #555;">Cofounder</p>
                 </div>
-                <div class="slider-item" style="text-align: center; margin-bottom: 20px;">
-                    <img src="assets/figures/1706810898742.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px;">
+                <div class="slider-item" style="text-align: center;margin-bottom: 20px;margin-right: 30px;left: 0px;transition-duration: 1.5s;padding-left: 0px;">
+                    <img src="assets/figures/1706810898742.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px; margin-right: 30px;">
                     <p class="text"><code>Sean Wayne</code></p>
                     <p style="font-size: 14px; font-style: italic; color: #555;">Venture Development Manager</p>
                 </div>
-                <div class="slider-item" style="text-align: center; margin-bottom: 20px;">
-                    <img src="assets/figures/1707431588746.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px;">
+                <div class="slider-item" style="text-align: center;margin-bottom: 20px;margin-right: 30px;left: 0px;transition-duration: 1.5s;padding-left: 0px;">
+                    <img src="assets/figures/1707431588746.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px; margin-right: 30px;">
                     <p class="text"><code>Nathan Clairmonte</code></p>
                     <p style="font-size: 14px; font-style: italic; color: #555;">Software Engineer</p>
                 </div>
-                <div class="slider-item" style="text-align: center; margin-bottom: 20px;">
-                    <img src="assets/figures/1517609965054.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px;">
+                <div class="slider-item" style="text-align: center;margin-bottom: 20px;margin-right: 30px;left: 0px;transition-duration: 1.5s;padding-left: 0px;">
+                    <img src="assets/figures/1517609965054.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px; margin-right: 30px;">
                     <p class="text"><code>Andrew Roberts</code></p>
                     <p style="font-size: 14px; font-style: italic; color: #555;">Business Development Manager</p>
                 </div>
-                <div class="slider-item" style="text-align: center; margin-bottom: 20px;">
-                    <img src="assets/figures/Screenshot+2024-11-29+at+09.38.26.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px;">
+                <div class="slider-item" style="text-align: center;margin-bottom: 20px;margin-right: 30px;left: 0px;transition-duration: 1.5s;padding-left: 0px;">
+                    <img src="assets/figures/Screenshot+2024-11-29+at+09.38.26.png" alt="Profile Picture" style="width: 350px; height: 350px; margin-bottom: 10px; margin-right: 30px;">
                     <p class="text"><code>Nino Spasik</code></p>
                     <p style="font-size: 14px; font-style: italic; color: #555;">Software Engineer</p>
                 </div>
