--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta content="en_EN" property="og:locale">
     <meta content="website" property="og:type">
     <meta content="https://www.coleaseum.com" property="og:url">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta content="Coleaseum" property="og:title">
     <meta content="Coleaseum Housing Inc. AI Real Estate Rental Platform." property="og:description">
 
