--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta content="en_EN" property="og:locale">
     <meta content="website" property="og:type">
     <meta content="https://www.coleaseum.com" property="og:url">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" href="faviconblack.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="faviconwhite.png" media="(prefers-color-scheme: dark)">
     <meta content="Coleaseum" property="og:title">
     <meta content="Coleaseum Housing Inc. AI Real Estate Rental Platform." property="og:description">
-
     <meta name="twitter:card" content="Coleaseum">
     <meta name="twitter:site" content="@coleaseum">
     <meta name="twitter:description" content="Coleaseum Housing Inc. AI Real Estate Rental Platform">
