--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
     <div class="container blog main" >
         <h1>Get in touch.</h1>
-        <p class="text"">
+        <p class="text">
             If you are interested in COLEASEUM, please provide your email for more information about the company, investment opportunities, and future updates.
         </p>
     </div>
@@ -234,7 +234,7 @@
     <footer>
         <div class="container" style="text-align: center;">
             <p >
-                Copyright © 2024 Coleaseum Housing Inc. All rights reserved.
+                Copyright © 2025 Coleaseum Housing Inc. All rights reserved.
             </p>
         </div>    
     </footer>
